/*
 * Copyright 2016-present the original author or authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package api.center.manager;

import "api/common/base.proto";
import "api/common/enums.proto";
import "api/common/page.proto";
import "api/common/r.proto";

// 配置相关
option java_package = "com.aiforest.tmmes.api.center.manager";
option java_outer_classname = "DeviceProto";
option objc_class_prefix = "Manager";
option java_multiple_files = true;

// 接口类
service DeviceApi {
    rpc list (PageDeviceQueryDTO) returns (RPageDeviceDTO);
    rpc selectByProfileId (ByProfileQueryDTO) returns (RDeviceListDTO);
}

//  By Profile Query DTO
message ByProfileQueryDTO {
    string profile_id = 1; // 模板ID
}

// R of Device DTO
message RDeviceDTO {
    api.common.RDTO result = 1; // 结果
    DeviceDTO data = 2; // 数据
}

// R of Device DTO Array
message RDeviceListDTO {
    api.common.RDTO result = 1; // 结果
    repeated DeviceDTO data = 2; // 数据
}

// R of Page Device DTO
message RPageDeviceDTO {
    api.common.RDTO result = 1; // 结果
    PageDeviceDTO data = 2; // 数据
}

// Page Device Query DTO
message PageDeviceQueryDTO {
    api.common.PageDTO page = 1; // 结果
    string profile_id = 2; // 模板ID
    DeviceDTO device = 3; // device
}

// Page Device DTO
message PageDeviceDTO {
    api.common.PageDTO page = 1; // 结果
    repeated DeviceDTO data = 2; // 数据
}

// Device DTO
message DeviceDTO {
    api.common.BaseDTO base = 1; // 基础
    string device_name = 2; // 位号名称
    string device_code = 3; // 位号编号
    string driver_id = 4; // 驱动ID
    string group_id = 5; // 分组ID
    api.common.EnableFlagDTOEnum enable_flag = 6; // 使能标识
    string tenant_id = 7; // 租户ID
}